# fromscratch

./: .gitignore  README.md  pyproject.toml
architecture/: layers.py
notes/: 00_project_design_choices.md  01_basic_layers_and_training.md  02_basic_training_improvements.md  layers_basic.md  project_design_choices.md  training_basic.md
testing/: testing_harness.py
tools/: __init__.py  init.py
training/: naive_training.py  optimization.py
