[project]
name = "fromscratch"
version = "0.1.0"
description = "The language model stack from scratch"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
    "torch>=2.13.0",
]


[build-system] # need hatchling to make tools/ importable since it's local
   requires = ["hatchling"]
   build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
    packages = ["tools"] # Allows tools/ to be imported
